[package]
name = "tomopy_optimizer"
version = "0.1.0"
edition = "2024"
description = "Tune TomoPy reconstruction parameters on two test slices of a pre-processed CT stack, then save them into the checkpoint HDF5"

[dependencies]
ct_reconstruction = { path = "../rust_ct_reconstruction" }
eframe = "0.35"
egui = "0.35"
hdf5-metno = "0.10"
image = { version = "0.25", default-features = false, features = ["png"] }
rfd = "0.17"
serde_json = "1.0"
sha2 = "0.10"
